fix: listing page alignment

--- a/styles/components/customDropdown.module.scss
+++ b/styles/components/customDropdown.module.scss
@@ -5,7 +5,7 @@
 }
 
 .input {
-  padding: 10px;
+  padding: 8px 12px;
   border: 1px solid #ccc;
   color: #878787;
   border-radius: 20px;
@@ -35,7 +35,7 @@
   border-radius: 4px;
   box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
   z-index: 10;
-  margin-top: 8px;
+  margin-top: 10px;
 }
 
 .option {
